# tracking_msgs

./: .gitignore  CMakeLists.txt  README.md  dependency.repos  package.xml
include/perception_msgs/: marker.hpp
msg/: Detection2D.msg  Detection3D.msg  Detection3DArray.msg  ObjectHypothesisWithPose.msg  Tracking2D.msg  Tracking2DArray.msg  Tracking2DWithPose.msg
